<resources>
    <string name="app_name">WeHarvest</string>
    <string name="activity_login_username_hint">Username</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_button">LOG IN</string>
    <string name="activity_login_create_account">CREATE NEW ACCOUNT</string>

    <string-array name="titles">
        <item>Explore</item>
        <item>Profile</item>
        <item>Recipes</item>
        <item>Events</item>
        <item>About Us</item>
        <item>Sowing and Harvesting</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="types_recipes">
        <item>Seed</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

    <string name="nav_explore">Explore</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_recipe">Recipes</string>
    <string name="nav_events">Events</string>
    <string name="nav_us">About Us</string>
    <string name="nav_sowing_harvesting">Sowing and Harvesting</string>
    <string name="nav_logout">Log Out</string>

    <string name="activity_recipes_create_orchard">¿How to create an Orchard?</string>
    <string name="activity_recipes_seeds">Seeds</string>
    <string name="activity_recipes_ground">Ground</string>
    <string name="activity_recipes_compound">Compound</string>
    <string name="activity_recipes_vertical_orchard">Vertical orchard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="progress_bar">Loading your farms...</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The easiest way to learn about urban farms and join a community!</string>

    <string name="slide_2_title">Events</string>
    <string name="slide_2_desc">Find out about the events that are being organized!</string>

    <string name="slide_3_title">Learn</string>
    <string name="slide_3_desc">Get to know the best practices to plant, harvest and cook!</string>

    <string name="slide_4_title">Ask</string>
    <string name="slide_4_desc">Make your queries to the database to know what you can plant in your city by season.</string>

    <string name="play_again">Play Again</string>

    <string name="activity_create_account_username_hint">Username</string>
    <string name="activity_create_account_password_hint">Password</string>
    <string name="activity_create_account_confirm_password_hint">Confirm Password</string>
    <string name="activity_create_account_signup">Create</string>
    <string name="activity_create_account_text_view">Create Account</string>
    <string name="activity_login_password_error">Passwords doesnt match</string>

    <string name="create_event">Create Event</string>
    <string name="create_event_hint">Event Name</string>
    <string name="create_recipe_hint">Recipe Name</string>
    <string name="create_event_place_hint">Enter Place</string>
    <string name="create_description">Enter description</string>
    <string name="create_description_recipe">Enter Recipe Description</string>
    <string name="create_submit">Create</string>
    <string name="create_title">Create new Recipe</string>
    <string name="create_type">Type</string>

    <string name="yunkText">"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</string>

    <string-array name="classification_array">
        <item>Seeds</item>
        <item>Ground</item>
        <item>Compound</item>
        <item>Vertical Orchard</item>
    </string-array>
    <string name="prueba">Prueba</string>
    <string name="query_agricultural_cycle">Ciclo Agrícola</string>
    <string name="query_season">Época</string>
    <string name="query_state">Estado</string>
    <string name="query_mode">Modalidad</string>
    <string name="query_crop">Cultivo</string>

    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>

    <string-array name="cycle_array">
        <item>Otoño - Invierno</item>
        <item>Primavera - Verano</item>
    </string-array>

    <string-array name="season_array">
        <item>Sow</item>
        <item>Harvest</item>
        <item>Sow + Harvest</item>
    </string-array>


    <string-array name="month_array">
        <item>Default</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="mode_array">
    <item>Sow</item>
    <item>Harvest</item>
    </string-array>

    <string-array name="state_array">
        <item>Resumen Nacional</item>
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Coahuila de Zaragoza</item>
        <item>Colima</item>
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>Michoacán de Ocampo</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>

    <string-array name="plant_array">
        <item>Default</item>
        <item>Acelga</item>
        <item>Ajo</item>
        <item>Alcachofa</item>
        <item>Apio</item>
        <item>Berenjena</item>
        <item>Borraja</item>
        <item>Brócoli</item>
        <item>Calabacin</item>
        <item>Calabaza</item>
        <item>Canónigos</item>
        <item>Cardillo</item>
        <item>Cardo</item>
        <item>Cebolla</item>
        <item>Cohollo</item>
        <item>Col</item>
        <item>Coliflor</item>
        <item>Escarola</item>
        <item>Espárrago</item>
        <item>Espinaca</item>
        <item>Fresas</item>
        <item>Guisante</item>
        <item>Haba</item>
        <item>Judías</item>
        <item>Lechuga</item>
    </string-array>


</resources>
