<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@mipmap/home"
            android:id="@+id/nav_explore"
            android:title="@string/nav_explore"/>
        <item
            android:icon="@mipmap/user"
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"/>
        <item
            android:icon="@mipmap/recipe"
            android:id="@+id/nav_recipe"
            android:title="@string/nav_recipe"/>
        <item
            android:icon="@mipmap/event"
            android:id="@+id/nav_events"
            android:title="@string/nav_events"/>
        <item
            android:icon="@mipmap/about"
            android:id="@+id/nav_us"
            android:title="@string/nav_us"/>
        <item
            android:icon="@mipmap/harvest"
            android:id="@+id/nav_sowing_harvesting"
            android:title="@string/nav_sowing_harvesting"/>
        <item
            android:icon="@mipmap/logout"
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"/>
    </group>

</menu>
