<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.weharvest2.weharvest20.ActivityRecipes"
    tools:showIn="@layout/app_bar_activity_recipes"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            style="@style/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_recipes_create_orchard"/>

        <Button
            android:id="@+id/activity_recipes_seeds"
            style="@style/button"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_recipes_seeds"
            />

        <Button
            android:id="@+id/activity_recipes_ground"
            style="@style/button"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_recipes_ground"
            />

        <Button
            android:id="@+id/activity_recipes_compound"
            style="@style/button"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_recipes_compound"
            />

        <Button
            android:id="@+id/activity_recipes_vertical_orchard"
            style="@style/button"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_recipes_vertical_orchard"
            />


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_recipe_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:layout_marginRight="20dp"
        app:backgroundTint="@color/greenDark"
        android:src="@mipmap/add"
        android:onClick="createRecipe"/>

</LinearLayout>

