<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.weharvest2.weharvest20.ActivityCreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:text="@string/activity_create_account_text_view"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_login_gap"/>

        <EditText
            android:id="@+id/activity_create_account_email"
            android:layout_width="@dimen/activity_login_edit_text_dimen"
            android:layout_height="wrap_content"
            android:hint="Email" />

        <EditText
            android:id="@+id/activity_create_account_username"
            android:layout_width="@dimen/activity_login_edit_text_dimen"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_account_username_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/activity_create_account_password"
            android:layout_width="@dimen/activity_login_edit_text_dimen"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_account_password_hint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/activity_create_account_confirm_password"
            android:layout_width="@dimen/activity_login_edit_text_dimen"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_account_confirm_password_hint"
            android:inputType="textPassword"/>



    </LinearLayout>

    <Button
        android:id="@+id/activity_create_account_signup"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_account_signup"
        style="@style/button"
        android:onClick="onClick"/>

</LinearLayout>

