<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.weharvest.ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:text="Huertos Urbanos"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_login_gap"/>


        <EditText
            android:id="@+id/activity_login_username"
            android:layout_width="@dimen/activity_login_edit_text_dimen"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_username_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/activity_login_pwd"
            android:layout_width="@dimen/activity_login_edit_text_dimen"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_login_signin"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_button"
        style="@style/button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/activity_login_create_account"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_create_account"
        style="@style/button"
        android:onClick="onClick"/>

</LinearLayout>
