<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.weharvest2.weharvest20.ActivityRecipes"
    tools:showIn="@layout/app_bar_activity_create_recipe">

    <EditText
        android:id="@+id/activity_recipe_create"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_recipe_hint"/>

    <Spinner
        android:id="@+id/activity_classification_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:hint="@string/create_event_place_hint"/>

    <EditText
        android:id="@+id/activity_recipe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_description_recipe"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/saveEvent"
        android:style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

</LinearLayout>