<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/cycle_title"
        android:style="@styles/title"
        android:text="@string/query_agricultural_cycle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp">
    </TextView>

    <Spinner
        android:id="@+id/spinner_cycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
    </Spinner>

    <TextView
        android:id="@+id/season_title"
        android:style="@styles/season"
        android:text="@string/query_season"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp">
    </TextView>

    <Spinner
        android:id="@+id/spinner_season"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
    </Spinner>

    <TextView
        android:id="@+id/state_title"
        android:style="@styles/title"
        android:text="@string/query_state"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp">
    </TextView>

    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
    </Spinner>

    <TextView
        android:id="@+id/mode_title"
        android:style="@styles/title"
        android:text="@string/query_mode"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp"
        >
    </TextView>

    <Spinner
        android:id="@+id/spinner_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
    </Spinner>

    <TextView
        android:id="@+id/crop_title"
        android:style="@styles/title"
        android:text="@string/query_crop"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp">
    </TextView>

    <Spinner
        android:id="@+id/spinner_crop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
    </Spinner>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:style="@style/button"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
</RelativeLayout>